# FlexSC

./: .classpath  .gitignore  README.md  build.xml  clear_ports.sh  compile.sh  exp.run  genres  karatsuba.cpp  kill_process.sh  oram_offline_ot_server  oram_offline_preot_server  oram_real_ot_server  oram_real_preot_server  pqeueue_result.txt  pythonRunner.py  run.sh  run2.sh  runtest.sh  stack_result.txt  start_process.sh  testCompute.sh  testSend.sh  testSpeed.sh  test_priority_queue_runtime.py  test_queue.py  test_queue_runtime.py  test_stack.py  test_stack_runtime.py  ttt.cpp
SCVM2/: build.xml
SimpleBinaryReader/: .classpath  .project  build.xml
in/: PageRank131072.in  PageRank16384_2.in  PageRank262144.in  PageRank65536.in  mf_temp.out
lib/: .gitignore
machine_spec/: 00.8
res/: 30accessPreOTEva  30accessPreOTGen  BS_1GB_notiming_ExOT_ONLINE  BS_1GB_notiming_PreOT_OFFLINE  BS_1GB_notiming_PreOT_OFFLINE_30  BS_1GB_notiming_PreOT_OFFLINE_30_2  BS_1GB_notiming_PreOT_OFFLINE_30_3  BS_1GB_notiming_PreOT_OFFLINE_30_4  BS_1GB_notiming_PreOT_OFFLINE_30_5
src/: PageRank.in  PageRank1024.in  PageRank32.in  als.in  emulator.properties  kill_process.sh  machine_ips.txt  machine_ips.txt.16  machine_ips.txt.2  machine_ips.txt.32  machine_ips.txt.4  (+4 more)
src/compiledlib/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  NoClass.java  abb.lcc  ams_sketch.cpp  avl.cpp  avl_with.cpp  cmake_install.cmake  count_min_sketch.cpp  count_sketch.cpp  dfs  dfs.cpp  dijkstra.cpp  dijkstra.cpp.bck  float.cpp  mapReduce.cpp  mem.cpp  prim  prim.cpp  priority_queue.cpp  sparse_matrix.cpp  ssp
(+1173 files in other folders)
